--- a/gb/22/11/27/n13873898.md
+++ b/gb/22/11/27/n13873898.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>散文：少年时的歌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13874142-shutterstock_557866879-600x400.jpg" />
 <h6>每回想起遥远的少年时代，耳边就响起《我们的田野》。歌声质朴淡雅，曲调仿佛是娓娓地叙说，悠悠的情调洋溢着自由的气息。(shutterstock)
 </h6>
 <hr>
 <p>少年时唱的歌，必有一些终生难忘，迟暮之年再回味那些熟悉的旋律，仿佛又回到当年的欢乐中去。19世纪后期，日本诗人国木田独步说：“<span style="color: #666699;"><strong>如果说少年的欢乐是诗，那么，少年的悲哀也是诗；如果说蕴藏在大自然心中的欢乐是应该歌唱，那么，向大自然之心私语的悲哀，也是应该歌唱的了。</strong></span>”我的少年时期正值上世纪50年代，生活平淡无忧无虑，没有学业重负，更谈不上悲哀，却充满嬉笑与歌声。那时小学校每礼拜都有专门唱歌的音乐课，至今回想依然历历在目。</p>
-<p>教我们唱歌的女老师姓章，约40岁上下，稍有些胖。章老师戴一副金丝边眼镜，记忆中从未见她对学生高声说话，大家都能感受到她的亲切温和。音乐课上，我们学简单的乐理知识和五线谱，也学唱许多<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%8C%E6%9B%B2.md#1">歌曲</a>，包括少量世界名曲。有些歌唱过后也就忘了，有些歌声虽未全忘，但也没有兴趣再回想，有些歌却令人一辈子忘不了。还有的歌忘不了，是因为与少年时的往事连在一起。好像是四年级的时候，章老师教过一曲《热血》，是上世纪30年代电影《夜半歌声》插曲，旋律激昂、雄壮：</p>
+<p>教我们唱歌的女老师姓章，约40岁上下，稍有些胖。章老师戴一副金丝边眼镜，记忆中从未见她对学生高声说话，大家都能感受到她的亲切温和。音乐课上，我们学简单的乐理知识和五线谱，也学唱许多歌曲，包括少量世界名曲。有些歌唱过后也就忘了，有些歌声虽未全忘，但也没有兴趣再回想，有些歌却令人一辈子忘不了。还有的歌忘不了，是因为与少年时的往事连在一起。好像是四年级的时候，章老师教过一曲《热血》，是上世纪30年代电影《夜半歌声》插曲，旋律激昂、雄壮：</p>
 <p style="text-align: left; padding-left: 60px;"><span style="color: #666699;"><strong>谁愿意做奴隶？谁愿意做马牛？</strong></span><br />
 <span style="color: #666699;"> <strong> 人道的烽火，燃遍了整个的欧洲。</strong></span><br />
 <span style="color: #666699;"> <strong> 我们为着博爱、平等、自由，</strong></span><br />
 <span style="color: #666699;"> <strong> 愿付任何的代价，甚至我们的头颅……</strong></span></p>
-<p>学期结束的时候，音乐课照例每人有一个得分成绩，这个得分的依据，是在当学期学过的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%8C%E6%9B%B2.md#1">歌曲</a>里，自由选择一曲，站在章老师的琴旁面向大家演唱，由章老师伴奏。这等于每人获得一次单独登台演唱的机会。那个学期的期末，全班男生先后轮到登台时，都不约而同地选了《热血》。记忆中，女生选择的是一支牧歌。曲名早忘了，不是文革后电影《少林寺》中的“牧羊曲”。那牧歌有淡淡的叙事式抒情，只依稀记得歌词大意，是说黄昏后放学回家，领着羊儿到山坡，“<strong><span style="color: #333399;">羊儿吃草我唱歌</span></strong>”。这样一幅悠闲宁静、田园诗般的画面，与现今学童“<strong><span style="color: #333399;">不许输在起跑线上</span></strong>”的艰难重负，真是天壤之别。</p>
+<p>学期结束的时候，音乐课照例每人有一个得分成绩，这个得分的依据，是在当学期学过的歌曲里，自由选择一曲，站在章老师的琴旁面向大家演唱，由章老师伴奏。这等于每人获得一次单独登台演唱的机会。那个学期的期末，全班男生先后轮到登台时，都不约而同地选了《热血》。记忆中，女生选择的是一支牧歌。曲名早忘了，不是文革后电影《少林寺》中的“牧羊曲”。那牧歌有淡淡的叙事式抒情，只依稀记得歌词大意，是说黄昏后放学回家，领着羊儿到山坡，“<strong><span style="color: #333399;">羊儿吃草我唱歌</span></strong>”。这样一幅悠闲宁静、田园诗般的画面，与现今学童“<strong><span style="color: #333399;">不许输在起跑线上</span></strong>”的艰难重负，真是天壤之别。</p>
 <p>不过当年女生中，有两人出乎意料地选择了《热血》，好像有点离经叛道。我对年少时音乐课的这段往事记忆犹新，是因为其中一名女生与我邻居，她叫宋□□。她家离我们家大约仅50米左右，她与同班女生下午跳橡皮筋，常常就在我们家门口。忘了是在三年级抑或四年级，一次母亲到学校，正当我们课后在操场，我一眼看见母亲拔腿就溜，继而躲在墙角偷偷观望。此时宋□□迎上去，陪母亲到老师办公室，这令我心里暗存几分感激。我至今未忘那首《热血》，是因为《热血》与年少时的生活经历连在一起。</p>
 <p>一些与我同时代的人，尤其自称“青春无悔”的老三届，常津津乐道于歌曲《让我们荡起双桨》。《让我们荡起双桨》于1955年出笼，我们跟着老师机械地学唱，谈不上心驰神往的愉悦。中年后渐渐明白，1955年的前一年，“胡风集团”遭遇大规模围剿，两年后是震惊全国的“整风反右”，从此知识分子齐刷刷地跪了下来。“<span style="color: #666699;"><strong>让我们荡起双桨，小船儿推开波浪。水面倒映着美丽的白塔，四周环绕着绿树红墙</strong></span>”<span style="color: #666699;">，听起来有画面感，音乐形象带有明确的粉饰。</span>对于无数知识分子在1957年遭受的灭顶之灾，《荡起双桨》的最大功能就是掩盖。我虽是学唱《荡起双桨》的第一代学生，但随着世事变迁，我对《荡起双桨》的厌恶感与日俱增。“<span style="color: #000000;">美丽的白塔</span>”与“<span style="color: #000000;">绿树红墙</span>”，描述的是北海公园，其实只属于红二代。而今还有多少人知道，北京高校不少年轻的右派学生，在巨大的政治压力下，来到“<span style="color: #000000;">美丽的白塔</span>”边沉湖自殁。</p>
 <p>对多数城市少年来说，“荡起双桨”只是春游或秋游时才有的一次体验。对农村与山区少年而言，对于河南、安徽、四川、广西……的广大农村少年而言，“荡起双桨”与“白塔红墙”更是遥远的梦。知道在那个年代里，究竟有多少衣不遮体的少年，是活活饿死的吗？《荡起双桨》的最后一段：“<span style="color: #333399;"><strong>我问你亲爱的伙伴，谁给我们安排下，幸福的生活？</strong></span>”<span style="color: #666699;">这更是对极权恶党露骨的阿谀逢迎。</span>所谓“<span style="color: #000000;">亲爱的伙伴</span>”，明明白白指的是太子党，对广大苦难中的少年而言，这是不折不扣的巨大欺骗。曾在社会底层挣扎的少年，以为自己也在“<span style="color: #000000;">亲爱的伙伴</span>”之列，每唱《荡起双桨》如同阿Q那样的飘飘然，实在是自作多情。专为太子党们“<span style="color: #000000;">安排幸福的生活</span>”者，是谁？</p>
@@ -34,8 +34,8 @@
 <strong><span style="color: #666699;"> ……</span></strong><br />
 <strong><span style="color: #666699;"> 没有人能够告诉我，</span></strong><br />
 <strong><span style="color: #666699;"> 山里面有没有住着神仙。</span></strong></p>
-<p>其实在我年少时，也有一支歌可与《童年》媲美，这就是章老师教的《我们的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%B0%E9%87%8E.md#1">田野</a>》。多少年过去了，至今每回想起遥远的少年时代，耳边就响起《我们的田野》。歌声质朴淡雅，无一丝雕琢的痕迹，但旋律展显的意境，却被烘托得诗意盎然。曲调仿佛是娓娓地叙说，悠悠的情调洋溢着自由的气息。每当唱起这首歌，眼前就能浮显出那个时代的田野与河流，蓝天白云下的稻田，还有水边的芦苇与野鸭。年少时，多少次望着雨水敲打玻璃窗，心里想到的就是“我们的田野”在雨中的样子。文革似乎淹没了这个美妙的旋律，文革后还是忘不了《我们的田野》。可惜时光无法倒流，今天的城市化潮流，人们已无法再回到“我们的田野”中去。毫无疑问，《我们的田野》是我今生今世最难忘的歌：</p>
-<p style="padding-left: 60px;"><span style="color: #666699;"><strong>我们的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%B0%E9%87%8E.md#1">田野</a>，美丽的田野。</strong></span><br />
+<p>其实在我年少时，也有一支歌可与《童年》媲美，这就是章老师教的《我们的田野》。多少年过去了，至今每回想起遥远的少年时代，耳边就响起《我们的田野》。歌声质朴淡雅，无一丝雕琢的痕迹，但旋律展显的意境，却被烘托得诗意盎然。曲调仿佛是娓娓地叙说，悠悠的情调洋溢着自由的气息。每当唱起这首歌，眼前就能浮显出那个时代的田野与河流，蓝天白云下的稻田，还有水边的芦苇与野鸭。年少时，多少次望着雨水敲打玻璃窗，心里想到的就是“我们的田野”在雨中的样子。文革似乎淹没了这个美妙的旋律，文革后还是忘不了《我们的田野》。可惜时光无法倒流，今天的城市化潮流，人们已无法再回到“我们的田野”中去。毫无疑问，《我们的田野》是我今生今世最难忘的歌：</p>
+<p style="padding-left: 60px;"><span style="color: #666699;"><strong>我们的田野，美丽的田野。</strong></span><br />
 <span style="color: #666699;"><strong> 碧绿的河水，流过无边的稻田。</strong></span><br />
 <span style="color: #666699;"><strong> 无边的稻田，好像起伏的海面。</strong></span></p>
 <p style="padding-left: 60px;"><span style="color: #666699;"><strong>平静的湖中，开满了荷花。</strong></span><br />
@@ -47,52 +47,42 @@
 <p>我想起1999年，人们在电视屏幕前，聆听澳门学童合唱《七子之歌》：“<span style="color: #666699;"><strong>你可知‘ma—cau’不是我真姓，我离开你太久了，母亲！</strong></span>”没想到歌声一开始，即令人心潮澎湃。不久，上海小荧星艺术团也排演了这首歌，并在电视台直播。小荧星艺术团的成员，大多太过机灵、聪明，他们知道自己是明日之星，他们接受专业的指导，演唱精致到了无可挑剔的程度，歌声甚至透露出超越年龄的世故。遗憾的是，小荧星们的演唱，缺乏的正是澳门学童不经意间流露出的那份纯朴、稚气与天真。要知道，那才是歌声最珍贵的要素，完全源自浑然天成，靠模仿学习无法获得。一个城市少年的整体气质，就隐藏在歌声里，谁也无法改变。这与《我们的田野》的原始风貌不能强求，更不能复制的道理，是同样的。</p>
 <p>是的！今天的人们，也许永远无法再回到当年“我们的田野”中去了。虽然还有人会唱起《我们的田野》，但那已不再是我在年少时的《我们的田野》。@#◇</p>
 <p>责任编辑：林芳宇</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/10/n10966208.md#1">散文：上海，消逝了的叫卖声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/12/n12181513.md#1">散文：何用炉中身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/21/n13717221.md#1">观雨堂主：作弊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/28/n13722788.md#1">观雨堂主：写信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/24/n13744380.md#1">那时，我们曾经“乱点”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/14/n13802201.md#1">观雨堂主：民众已被中共关入笼子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/15/n13803062.md#1">观雨堂主：佩洛西访台的真正意义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/9/n13820499.md#1">观雨堂主：谈油画《我的前夫》中隐藏的信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/25/n13832322.md#1">观雨堂主：谈样板戏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/22/n13870981.md#1">有关绰号的往事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10966208.md#1">散文：上海，消逝了的叫卖声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/6/12/n12181513.md#1">散文：何用炉中身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/21/n13717221.md#1">观雨堂主：作弊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/28/n13722788.md#1">观雨堂主：写信</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/24/n13744380.md#1">那时，我们曾经“乱点”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/14/n13802201.md#1">观雨堂主：民众已被中共关入笼子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/15/n13803062.md#1">观雨堂主：佩洛西访台的真正意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/9/n13820499.md#1">观雨堂主：谈油画《我的前夫》中隐藏的信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/25/n13832322.md#1">观雨堂主：谈样板戏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/22/n13870981.md#1">有关绰号的往事</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/7/n10121258.md#1" target="_blank">郑克中：北大“文革”二三事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962721.md#1">【探索时分】三大动作 日本为支援台湾做准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964912.md#1">【晚间新闻】中共强推第4针？ 拒者禁出门甚至收押</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964926.md#1">【全球新闻】不惧中共 麦卡锡将率两党议员见蔡英文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962245.md#1">九种最好的Costco商品 可在家随时备货</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963848.md#1">马英九在湖南称两岸都是中华民国 中共封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961165.md#1">F-22令歼-20难敌 为何只有美空军可操作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963961.md#1">首度分享育儿日常 孙艺真自曝春天最忧心事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964562.md#1">1年痛失3至亲 大陆歌手刘维：户口本上只有我了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964701.md#1">机场劝架被吼“闭嘴” 秦岚高EQ举动获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964646.md#1">张艾嘉宣传电影一句话 泄露与周润发好交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961054.md#1">有糖尿病也可放心吃！4种零食控血糖又解馋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959660.md#1">吃杏仁减重有4诀窍 还防糖尿病、心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964375.md#1">你饭后经常胀气吗？ 哈佛医生教你如何缓解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964240.md#1">马斯克担忧 商业房地产引发债务危机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306146.md#1">老花 近视 飞蚊症 干眼症 中医7招应对眼疾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307030.md#1">【时事军事】F-22抵达中东 以色列要先发制人？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/27/n13873898.htm">散文：少年时的歌</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/27/n13873898.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/27/n13873898.htm">散文：少年时的歌</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/27/n13873898.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
